[project]
name = "mcp-dev-utils"
version = "0.1.0"
description = "A collection of developer utilities exposed via the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.28.0",
]

[project.scripts]
mcp-dev-utils = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
